--- a/app/eventosFuturos/eventosfuturos.html
+++ b/app/eventosFuturos/eventosfuturos.html
@@ -1,7 +1,7 @@
 <br><br>
 
 <center>
-
+	<div class="mdl-grid">
 <div class="event  mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-phone"
 	 ng-repeat="event in events | orderBy:'date' " ng-click="goToEventDetails(event)">
 
@@ -55,4 +55,5 @@
 		</div>
 	</div>
 </div>
+		 </div>
 </center>
