--- a/app/index.html
+++ b/app/index.html
@@ -94,22 +94,22 @@
             <span class="visuallyhidden">Accounts</span>
           </button>
           <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-            <li class="mdl-menu__item">
-                <i class="material-icons" href="#!/crear-eventos">create</i>
+            <a class="mdl-menu__item"  href="#!/crear-eventos">
+                <i class="material-icons">create</i>
               Crear Evento
-            </li>
-            <li class="mdl-menu__item" href="#!/eventos-futuros">
+            </a>
+            <a class="mdl-menu__item" href="#!/eventos-futuros">
                 <i class="material-icons">event_note</i>
               Eventos Futuros
-            </li>
-            <li class="mdl-menu__item" href="#!/eventos-pasados">
+            </a>
+            <a class="mdl-menu__item" href="#!/eventos-pasados">
                 <i class="material-icons">event_available</i>
               Eventos Pasados
-            </li>
-            <li class="mdl-menu__item">
+            </a>
+            <a class="mdl-menu__item">
                 <i class="material-icons">settings</i>
               Configuracion
-            </li>
+            </a>
           </ul>
         </div>
       </header>
