--- a/app/eventosPasados/eventosPasados.html
+++ b/app/eventosPasados/eventosPasados.html
@@ -1,5 +1,6 @@
 <br><br>
 <center>
+	<div class="mdl-grid">
 <div class="event  mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-phone"
 	 ng-repeat="event in events | orderBy:'date' " ng-click="goToEventDetails(event)">
 
@@ -53,4 +54,5 @@
 		</div>
 	</div>
 </div>
+		</div>
 </center>
