--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,11 @@
         <a class="mdl-navigation__link" href="#!/clientes">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">person</i>
           Clientes</a>
+
+          <a class="mdl-navigation__link" href="#!/rrpps">
+              <i role="presentation" class="material-icons" style="vertical-align: middle;">hearing</i>
+              Lista RRPP </a>
+
         <a class="mdl-navigation__link" href="#!/doorman">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">phonelink_lock</i>
           Doormans </a>
@@ -210,6 +215,7 @@
   <script src="eventosFuturos/eventosFuturos.js"></script>
   <script src="eventosFuturos/eventosFuturos.js"></script>
   <script src="eventosPasados/eventosPasados.js"></script>
+  <script src="rrpps/rrpps.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
