--- a/app/index.html
+++ b/app/index.html
@@ -216,6 +216,7 @@
   <script src="eventosFuturos/eventosFuturos.js"></script>
   <script src="eventosPasados/eventosPasados.js"></script>
   <script src="rrpps/rrpps.js"></script>
+  <script src="createRrpp/createRrpp.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
