--- a/app/facturacion/facturacion.html
+++ b/app/facturacion/facturacion.html
@@ -37,7 +37,7 @@
 
   <div ng-show="isFactura" class="detalle">
 
-  <button ng-show="isFacturaClosed()" ng-click="openFileInput()">Pagar</button>
+  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" ng-show="isFacturaClosed()" ng-click="openFileInput()">Pagar</button>
 
     <div ng-show="isFacturaClosed()" class="mdl-cell  mdl-cell--12-col mdl-cell--12-col-phone  image-file-container">
       <input class="hidden" type='file' id="imgInp" />
