--- a/app/index.html
+++ b/app/index.html
@@ -126,9 +126,9 @@
           <i role="presentation" class="material-icons" style="vertical-align: middle;">person</i>
           Clientes</a>
 
-        <!--  <a class="mdl-navigation__link" href="#!/rrpps">
+          <a class="mdl-navigation__link" href="#!/rrpps">
               <i role="presentation" class="material-icons" style="vertical-align: middle;">hearing</i>
-              Lista RRPP </a> -->
+              Lista RRPP </a>
 
         <a class="mdl-navigation__link" href="#!/doorman">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">phonelink_lock</i>
