--- a/app/index.html
+++ b/app/index.html
@@ -126,16 +126,17 @@
           <i role="presentation" class="material-icons" style="vertical-align: middle;">person</i>
           Clientes</a>
 
-          <a class="mdl-navigation__link" href="#!/rrpps">
+        <!--  <a class="mdl-navigation__link" href="#!/rrpps">
               <i role="presentation" class="material-icons" style="vertical-align: middle;">hearing</i>
               Lista RRPP </a>
-
+ -->
         <a class="mdl-navigation__link" href="#!/doorman">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">phonelink_lock</i>
           Doormans </a>
-          <a class="mdl-navigation__link" href="#!/facturacion">
+    <!--      <a class="mdl-navigation__link" href="#!/facturacion">
             <i role="presentation" class="material-icons" style="vertical-align: middle;">payment</i>
-            Facturacion</a>
+            Facturacion</a> -->
+
         <a  id="sign-out-button" class="mdl-navigation__link" >
           <i class="material-icons" style="vertical-align: middle;">power_settings_new</i>   Salir</a>
 
