--- a/app/createRrpp/createRrpp.html
+++ b/app/createRrpp/createRrpp.html
@@ -5,19 +5,15 @@
 
     <md-input-container class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
         <label>Nombre Relacionador Publico</label>
-        <input  required  type="text" class="mdl-textfield__input" type="text" id="name">
+        <input  required  type="text" class="mdl-textfield__input" type="text" id="nombre">
     </md-input-container>
     <br>
 
     <md-input-container class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
         <label>Correo Electronico</label>
-        <input  required  type="email" class="mdl-textfield__input"   id="clientEmail">
+        <input  required  type="email" class="mdl-textfield__input"   id="correo">
     </md-input-container>
     <br>
-    <md-input-container class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
-        <label>Password</label>
-        <input required type="password" class="mdl-textfield__input"  id="password">
-    </md-input-container>
 
 
     <br>
