--- a/app/index.html
+++ b/app/index.html
@@ -144,7 +144,7 @@
 
 
     </div>
-    <main class="mdl-layout__content">
+    <main class="mdl-color--blue-grey-50 mdl-layout__content">
       <div class="page-content">
 
         <div ng-view>
