--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -11,7 +11,7 @@
     <div class="col-xs-12 padd-20-tb contentCard white-bg">
         <label class="col-xs-12 visible-xs padd-0 required">Título del Evento</label>
 
-        <div class="col-xs-12 padd-0-l col-sm-6 col-lg-8 text-left padd-0-xs">
+        <div class=" col-xs-12 padd-0-l col-sm-6 col-lg-8 text-left padd-0-xs">
           <input required ng-model="newEvent.name" type="text"  required="required"
                  class="mdl-cell mdl-cell-- form-control br-2 inputCon checkInput" placeholder="Título del Evento"
                  data-error="El evento tiene que tener una descripción (al menos 3 letras).">
@@ -22,10 +22,19 @@
 
 <br>
 
-  <div class="col-xs-12 padd-20-tb contentCard white-bg image-file-container">
-    <input class="mdl-cell hidden" type='file' id="imgInp" />
-    <img class="mdl-cell" ng-click="openFileInput()"  id="blah" src="{{newEvent.image}}" alt="your image" />
+  <div style="height: 389px; width: 1045px;     content: '¡Arrastra tu imagen aquí o haz clic para añadir!';"
+
+       data-width="1350" data-resize="true" data-originalsize="false" data-height="500" data-editstart="true"
+       class=" upload col-xs-12 padd-20-tb contentCard white-bg image-file-container "
+       ng-click="openFileInput()" alt="portada evento"
+       src="{{newEvent.image}}">
+    <input class="mdl-cell hidden" style="width: 100%; height:100%;cursor: pointer;position: absolute;" type='file' id="imgInp" />
+    <img class="mdl-cell"    id="blah"   />
   </div>
+
+    <div class="dropzone" data-width="960" data-height="540" data-resize="true" data-url="{{newEvent.image}}" style="width: 100%;">
+      <input type="file" name="thumb" />
+    </div>
 
   <!--  <input time="false" ng-model="prueba1" date="true" mdc-datetime-picker="" type="text" id="date" placeholder="Date"
            ng-model="date" min-date="minDate" max-date="maxDate" class=" md-input" readonly="readonly">
@@ -229,7 +238,7 @@
 
 
 
-  <button ng-click="saveEvent()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Publicar</button>
+  <button ng-click="saveEvent()" class="mdl-button mdl-cell--5-col mdl-cell--12-col-phone mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Publicar</button>
 
 </center>
 </div>
