--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -1,75 +1,62 @@
 <link rel="stylesheet" type="text/css" href="css/cssCrearEvento.css">
-<link rel="stylesheet" type="text/css" href="css/html5imageupload.css">
-<script src="/app/js/html5imageupload.js" type="text/javascript"></script>
-<script>$('.dropzone').html5imageupload();</script>
 
 <div  class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
 
   <center>
-  <div>
- <md-progress-circular ng-disabled="isLoading" class="progress-circular md-warn md-hue-3 loader-saving hidden" md-diameter="70"/>
-</div>
+    <div>
+      <md-progress-circular ng-disabled="isLoading" class="progress-circular md-warn md-hue-3 loader-saving hidden" md-diameter="70"/>
+    </div>
 
-  <div>
-    <div class="col-xs-12 padd-20-tb contentCard white-bg">
+    <div>
+      <div class="col-xs-12 padd-20-tb contentCard white-bg">
+        <label class="col-xs-12 visible-xs padd-0 required">Título del Evento</label>
 
-        <div class=" col-xs-12 padd-0-l col-sm-6 col-lg-8 text-left padd-0-xs">
+        <div class="col-xs-12 padd-0-l col-sm-6 col-lg-8 text-left padd-0-xs">
           <input required ng-model="newEvent.name" type="text"  required="required"
-                 class="mdl-cell mdl-cell-- form-control br-2 inputCon checkInput" style="text-align: center" placeholder="Título del Evento"
+                 class="mdl-cell mdl-cell-- form-control br-2 inputCon checkInput" placeholder="Título del Evento"
                  data-error="El evento tiene que tener una descripción (al menos 3 letras).">
 
         </div>
       </div>
     </div>
 
-<br>
+    <br>
 
-  <div style="height: 389px; width: 1045px;     content: '¡Arrastra tu imagen aquí o haz clic para añadir!';"
+    <div class="col-xs-12 padd-20-tb contentCard white-bg image-file-container">
+      <input class="mdl-cell hidden" type='file' id="imgInp" />
+      <img class="mdl-cell" ng-click="openFileInput()"  id="blah" src="{{newEvent.image}}" alt="your image" />
+    </div>
 
-       data-width="1350" data-resize="true" data-originalsize="false" data-height="500" data-editstart="true"
-       class="col-xs-12 padd-20-tb contentCard white-bg image-file-container "
-       ng-click="openFileInput()" alt="portada evento"
-       >
-    <input class="mdl-cell hidden" style="width: 100%; height:100%;cursor: pointer;position: absolute;" type='file' id="imgInp" />
-    <img class="mdl-cell"    id="blah" src="{{newEvent.image}}"   />
+    <!--  <input time="false" ng-model="prueba1" date="true" mdc-datetime-picker="" type="text" id="date" placeholder="Date"
+             ng-model="date" min-date="minDate" max-date="maxDate" class=" md-input" readonly="readonly">
 
-  </div>
+      <input mdc-datetime-picker="" ng-model="prueba2" date="false" time="true" type="text" id="time" short-time="true"
+             placeholder="Time" min-date="minDate" format="hh:mm a" ng-model="time" class=" md-input"
+             readonly="readonly">
 
-    <div class="dropzone" data-width="960" data-height="540" data-url="{{newEvent.image}}" data-resize="true" style="width: 100%;">
-      <input type="file" name="thumb" />
+      <button  ng-click="mostrar()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> mostrar dato</button>
+   -->
+    <br>
+
+
+    <div class="col-xs-12 contentCard white-bg">
+      <table>
+        <th>
+          <md-input-container   class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
+            <input mdc-datetime-picker="" date="true" time="true" type="text" id="datetime1" placeholder="Fecha inicial"
+                   min-date="currentDate" ng-model="newEventStart" class="md-input">
+          </md-input-container>
+        </th><th>
+        <md-input-container class=" mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
+          <input mdc-datetime-picker=""  ng-disabled="isStartDateSelected" date="true" time="true" type="text" id="datetime2"
+                 placeholder="Fecha final" min-date="newEventStart" ng-model="newEventEnd" class=" md-input">
+        </md-input-container>
+      </th>
+      </table>
     </div>
 
 
-  <!--  <input time="false" ng-model="prueba1" date="true" mdc-datetime-picker="" type="text" id="date" placeholder="Date"
-           ng-model="date" min-date="minDate" max-date="maxDate" class=" md-input" readonly="readonly">
-
-    <input mdc-datetime-picker="" ng-model="prueba2" date="false" time="true" type="text" id="time" short-time="true"
-           placeholder="Time" min-date="minDate" format="hh:mm a" ng-model="time" class=" md-input"
-           readonly="readonly">
-
-    <button  ng-click="mostrar()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> mostrar dato</button>
- -->
-<br>
-
-
-<div class="col-xs-12 contentCard white-bg">
-<table>
-<th>
-      <md-input-container   class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
-        <input mdc-datetime-picker="" date="true" time="true" type="text" id="datetime1" placeholder="Fecha inicial"
-               min-date="currentDate" ng-model="newEventStart" class="md-input">
-      </md-input-container>
-  </th><th>
-      <md-input-container class=" mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
-        <input mdc-datetime-picker=""  ng-disabled="isStartDateSelected" date="true" time="true" type="text" id="datetime2"
-               placeholder="Fecha termino" min-date="newEventStart" ng-model="newEventEnd" class=" md-input">
-      </md-input-container>
-</th>
-</table>
-</div>
-
-
-<br>
+    <br>
     <div class="col-xs-12  padd-20-tb contentCard white-bg">
       <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
         <label>Descripcion</label>
@@ -112,20 +99,20 @@
           </md-select>
         </md-input-container>
       </div>
-<div class="artista-select">
-  <br>
-      <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
-        <label>Artista, dj, banda</label>
-        <input ng-model="newEvent.djs">
-      </md-input-container>
-</div>
+      <div class="artista-select">
+        <br>
+        <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
+          <label>Artista, dj, banda</label>
+          <input ng-model="newEvent.djs">
+        </md-input-container>
+      </div>
       <div class="ambiente-select">
-      <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
-        <label>Ambiente (max 2)</label>
-        <md-select ng-model="eventEnvironment" multiple ng-change="allowUpTo2Ambiente()">
-          <md-option class="ambiente-option" ng-value="environment.name" ng-repeat="environment in environments">{{environment.name}}</md-option>
-        </md-select>
-      </md-input-container>
+        <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
+          <label>Ambiente (max 2)</label>
+          <md-select ng-model="eventEnvironment" multiple ng-change="allowUpTo2Ambiente()">
+            <md-option class="ambiente-option" ng-value="environment.name" ng-repeat="environment in environments">{{environment.name}}</md-option>
+          </md-select>
+        </md-input-container>
       </div>
       <br>
       <div>
@@ -174,75 +161,75 @@
           </label>
         </div>
 
-<table>
+        <table>
 
 
-  <th >
-        <md-input-container  class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone  md-block">
-          <label>Termino horario gratis</label>
-          <input mdc-datetime-picker="" ng-show="activarHoraGratis" ng-disabled="isEndDateSelected"  date="true" time="true" type="text" id="datetime3"
-                 min-date="newEventStart" max-date="newEventEndPlus1" ng-model="newEvent.freemiumHour" class="md-input">
-        </md-input-container>
-  </th><th>
-        <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
-          <label>Valor en Puerta</label>
-          <input type="number" ng-model="newEvent.entryValue" required md-no-asterisk>
-        </md-input-container>
-  </th>
-</table>
+          <th >
+            <md-input-container  class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone  md-block">
+              <label>Termino horario gratis</label>
+              <input mdc-datetime-picker="" ng-show="activarHoraGratis" ng-disabled="isEndDateSelected"  date="true" time="true" type="text" id="datetime3"
+                     min-date="newEventStart" max-date="newEventEndPlus1" ng-model="newEvent.freemiumHour" class="md-input">
+            </md-input-container>
+          </th><th>
+          <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
+            <label>Valor en Puerta</label>
+            <input type="number" ng-model="newEvent.entryValue" required md-no-asterisk>
+          </md-input-container>
+        </th>
+        </table>
       </div>
     </div>
 
-  <br>
- <!-- <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="!citiesOne">
-    <label>Ciudad</label>
-    <md-select ng-model="newEvent.city" class="city-select">
-      <md-option><em>None</em></md-option>
-      <md-option ng-repeat="city in cities" ng-value="city.name">
-        {{city.name}}
-      </md-option>
-    </md-select>
-  </md-input-container> -->
+    <br>
+    <!-- <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="!citiesOne">
+       <label>Ciudad</label>
+       <md-select ng-model="newEvent.city" class="city-select">
+         <md-option><em>None</em></md-option>
+         <md-option ng-repeat="city in cities" ng-value="city.name">
+           {{city.name}}
+         </md-option>
+       </md-select>
+     </md-input-container> -->
 
-<!--  <br>
-  <div class="doorman-select">
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="myDoormansOne">
-      <label>Doorman</label>
-      <md-select ng-model="selectedDoorman1" multiple>
-        <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans1" selected>{{myDoorman.name}}1</md-option>
-      </md-select>
-    </md-input-container>
-  </div>
+    <!--  <br>
+      <div class="doorman-select">
+        <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="myDoormansOne">
+          <label>Doorman</label>
+          <md-select ng-model="selectedDoorman1" multiple>
+            <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans1" selected>{{myDoorman.name}}1</md-option>
+          </md-select>
+        </md-input-container>
+      </div>
 
-  <div class="doorman-select" >
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-hide="myDoormansOne">
-      <label>Doorman</label>
-      <md-select ng-model="selectedDoorman" multiple>
-        <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans" >{{myDoorman.name}}</md-option>
-      </md-select>
-    </md-input-container>
-  </div>
+      <div class="doorman-select" >
+        <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-hide="myDoormansOne">
+          <label>Doorman</label>
+          <md-select ng-model="selectedDoorman" multiple>
+            <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans" >{{myDoorman.name}}</md-option>
+          </md-select>
+        </md-input-container>
+      </div>
 
-<br> -->
-
-
+    <br> -->
 
 
 
-<!--
-  <div>
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone ">
-      <label>Descuento Izinat luego de horario cumplido</label>
-      <md-select ng-model="newEvent.descOutHour">
-        <md-option><em>None</em></md-option>
-        <md-option ng-value="descOutHour" ng-repeat="descOutHour in descOutHours">{{descOutHour}}%</md-option>
-      </md-select>
-    </md-input-container>
-  </div> -->
+
+
+    <!--
+      <div>
+        <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone ">
+          <label>Descuento Izinat luego de horario cumplido</label>
+          <md-select ng-model="newEvent.descOutHour">
+            <md-option><em>None</em></md-option>
+            <md-option ng-value="descOutHour" ng-repeat="descOutHour in descOutHours">{{descOutHour}}%</md-option>
+          </md-select>
+        </md-input-container>
+      </div> -->
 
 
 
-  <button ng-click="saveEvent()" class="mdl-button mdl-cell--5-col mdl-cell--12-col-phone mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Publicar</button>
+    <button ng-click="saveEvent()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Publicar</button>
 
-</center>
+  </center>
 </div>
